tests/baselines/reference/awaitUsingDeclarationsInForOf.3.errors.txt
awaitUsingDeclarationsInForOf.3.ts(2,22): error TS1492: 'await using' declarations may not have binding patterns.


==== awaitUsingDeclarationsInForOf.3.ts (1 errors) ====
    async function main() {
        for (await using {} of []) {
                         ~~
!!! error TS1492: 'await using' declarations may not have binding patterns.
        }
    }
    